updated methods for infoDB defined layout for game over screen created onclick listeners for activities associated with relevant layouts work on DB class to be completed including export to CSV functionality

--- a/19190859_FYP/app/src/main/res/layout/activity_view_data.xml
+++ b/19190859_FYP/app/src/main/res/layout/activity_view_data.xml
@@ -27,7 +27,7 @@
             android:text="data will display here" />
 
         <Button
-            android:id="@+id/setuserinfo"
+            android:id="@+id/viewdatabutton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -39,7 +39,7 @@
             android:text="press this button to view data" />
 
         <Button
-            android:id="@+id/getuserinfo"
+            android:id="@+id/exportdatabutton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
