--- a/19190859_FYP/app/src/main/res/layout/activity_view_data.xml
+++ b/19190859_FYP/app/src/main/res/layout/activity_view_data.xml
@@ -38,11 +38,7 @@
             android:orientation="vertical"
             android:layout_alignParentBottom="true">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="put in user id below to get relevant answers"
-                />
+
 
         <EditText
             android:id="@+id/edittext"
@@ -54,31 +50,37 @@
             />
             <TextView
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/edittextInstruction"
+                />
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 />
-        <Button
-            android:id="@+id/viewdatabutton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
+            <Button
+                android:id="@+id/viewDataByIDbutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:background="@drawable/buttonbg"
+                android:text="@string/view_Data_by_id" />
 
-            android:background="@drawable/buttonbg"
-            android:text="@string/display_data" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 />
 
-        <Button
-            android:id="@+id/exportdatabutton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
-            android:background="@drawable/buttonbg"
-            android:text="@string/export_Data" />
+            <Button
+                android:id="@+id/viewdatabutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+
+                android:background="@drawable/buttonbg"
+                android:text="@string/display_data" />
 
             <TextView
                 android:layout_width="match_parent"
